# mucli

./: .gitignore  Cargo.toml  LICENSE  README.md  config.txt  enc.enc.enc.README.md  enc.enc.enc.enc.README.md  enc.enc.enc.enc.enc.README.md  main.rs  password.rs  test.txt
.github/workflows/: build_project.yml  zip_and_release.yml
mucli_installation/: install_mucli.sh
src/: antivirus.rs  compression.rs  copy.rs  currency.rs  enc.config.txt  encryption.rs  main.rs  move.rs  network.rs  password.rs  qrcode.rs  rename.rs  shell.rs  update.rs  utils.rs
src/antivirus/: annex.rs  mod.rs  responses.rs
src/compress/: mod.rs
src/compression/: annex.rs  mod.rs
src/copy/: mod.rs
src/encryption/: annex.rs  mod.rs
src/move/: annex.rs  mod.rs
src/password/: annex.rs  mod.rs
src/rename/: annex.rs  mod.rs
src/shell/: annex.rs  mod.rs
src/timer/: annex.rs  mod.rs
src/update/: annex.rs  mod.rs
src/utils/: config_interact.rs  file.rs  line.rs  mod.rs  terminal.rs
test/: hey  wow
