[package]
name = "mucli"
version = "0.1.0"
authors = ["DevYatsu"]
description = "A multi-purposes client line interface: mucli!"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15", features = ["cargo"] }
custom_error = "1.9.2"
dialoguer = "0.10.4"
indicatif = "0.17.5"
rand = "0.8.5"
reqwest = "0.11.18"
simplecrypt = "1.0.2"
tokio = { version = "1.29.1", features = ["full"] } 
zip = "0.6.6"
zip-extensions = "0.6.1"
