[package]
name = "mucli"
version = "0.1.0"
authors = ["DevYatsu"]
description = "A multi-purposes client line interface: mucli!"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-stream = "2.0.0"
clap = { version = "4.3.15", features = ["cargo"] }
custom_error = "1.9.2"
dialoguer = "0.10.4"
dirs = "5.0.1"
indicatif = "0.17.5"
rand = "0.8.5"
reqwest = {version = "0.11.18", features = ["multipart"]}
serde = {version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
simplecrypt = "1.0.2"
termion = "2.0.1"
tokio = { version = "1.29.1", features = ["full"] } 
zip = "0.6.6"
zip-extensions = "0.6.1"
