[package]
name = "mucli"
version = "0.1.0"
authors = ["DevYatsu"]
description = "A multi-purposes client line interface: mucli!"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-stream = "2.0.0"
clap = { version = "4.3.15", features = ["cargo"] }
custom_error = "1.9.2"
dialoguer = "0.10.4"
dirs = "5.0.1"
ifcfg = "0.1.2"
indicatif = "0.17.5"
itertools = "0.11.0"
qrcode = "0.12.0"
rand = "0.8.5"
reqwest = {version = "0.11.18", features = ["multipart"]}
serde = {version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
simplecrypt = "1.0.2"
termion = "2.0.1"
tokio = { version = "1.29.1", features = ["full"] } 
wifi-qr-code = "0.1.0"
wifiscanner = "0.5.1"
zip = "0.6.6"
